# web_homework7

./: config.ini  main.py  pyproject.toml  seed.py
migration/: env.py
migration/versions/: 3447268ea64f_init.py
src/: db.py  models.py
